--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-body {
-    background-color: rgb(190, 238, 250);
+table.mitabla {
+    border: red 1px solid;
 }
 
-table {
-    background-color: orange;
+td, th {
+    border: blue 1px solid;
 }
